@@ -1,8 +1,9 @@
 2007-04-25
 
   Merge in zalas' patch to support both SAR and NSA archives at the
-  same time, and an adapted version of the `drawfix' patch to speed up
-  screen updates in windowed mode.
+  same time, an adapted version of the `drawfix' patch to speed up
+  screen updates in windowed mode, and a patch from Roine Gustafsson
+  that reduces flicker when sprites are changed.
 
 
 2007-04-15
